[tool.poetry]
name = "gli4py"
version = "0.0.15"
description = "A python 3 API wrapper for GL-inet routers for consumption by Home Assistant"
authors = ["HarvsG <doctor@codingdoctor.co.uk>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"
packages = [{include = "gli4py"}]

[tool.poetry.dependencies]
python = "^3.11"
uplink = "0.10.0"
passlib = "^1.7.4"
semver = "^3.0.0"

[tool.poetry.group.dev.dependencies]
uplink = "^0.10.0"
requests = "^2.27.1"
aiohttp = "^3.8.4"
asyncio = "^3.4.3"
json2json = "^0.1.0"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


